--- a/card-perfil.html
+++ b/card-perfil.html
@@ -4,11 +4,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="card.css">
     <title>Document</title>
 </head>
 <body>
     <div id="content-main">
-        <img src="" alt="">
+        <img id="pic-perfil" src="assets/picperfil.png" alt="">
+        <br><br>
+        <span id="nome">Deodilucas Souza da Silva, 19</span>
+        <span id="cargo">Estudante e Desenvolvedor</span>
+        <br><br>
+        <span id="curso">Ciências da Computção</span>
+        <span id="uni">Universidade Cruzeiro do Sul</span>
+        <br><br>
+        <span id="location">São Paulo, Brasil</span>
+        <br><br>
+        <div class="icons">
+            <a href=""><img src="assets/linkedin.svg" alt=""></a>
+            <a href=""><img src="assets/github.svg" alt=""></a>
+        </div>
     </div>
 </body>
 </html>
