--- a/card-perfil.html
+++ b/card-perfil.html
@@ -14,6 +14,7 @@
 </head>
 
 <body>
+    
     <div id="content-main">
         <img id="pic-perfil" src="assets/picperfil.png" alt="">
         <br><br>
@@ -30,6 +31,7 @@
             <a href=""><img src="assets/github.svg" alt=""></a>
         </div>
     </div>
+    <span id="reference"><a href="https://www.freepik.com/free-photo/liquid-marbling-paint-texture-background-fluid-painting-abstract-texture-intensive-color-mix-wallpaper_20017534.htm#page=3&query=abstract%20background&position=46&from_view=keyword">Image by benzoix</a> on Freepik</span>
 </body>
 
 </html>
