--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
         <span id="location">São Paulo, Brasil</span>
         <br><br>
         <div class="icons">
-            <a href=""><img src="assets/linkedin.svg" alt=""></a>
-            <a href=""><img src="assets/github.svg" alt=""></a>
+            <a href="https://www.linkedin.com/in/deodilucas-souza/"><img src="assets/linkedin.svg" alt=""></a>
+            <a href="github.com/deodilucas"><img src="assets/github.svg" alt=""></a>
         </div>
     </div>
     <span id="reference"><a href="https://www.freepik.com/free-photo/liquid-marbling-paint-texture-background-fluid-painting-abstract-texture-intensive-color-mix-wallpaper_20017534.htm#page=3&query=abstract%20background&position=46&from_view=keyword">Image by benzoix</a> on Freepik</span>
